--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             'Wanderkarte'   : hiking
         },{
             'Schummerung' : shading,
+            'Höhenlinien' : contours,
             'POIs' : pois,
             'joind.in' : joindin,
             'Via Claudia Augusta' : viaClaudiaAugusta
